application/static/css/style.css
/* ___________________ FONTS ____________________________ */

@font-face {
  font-family: sarabun-bold;
  src: url("../fonts/Sarabun/Sarabun-Bold.ttf");
}

@font-face {
  font-family: sarabun-regular;
  src: url("../fonts/Sarabun/Sarabun-Regular.ttf");
}

@font-face {
  font-family: sarabun-light;
  src: url("../fonts/Sarabun/Sarabun-Light.ttf");
}

@font-face {
  font-family: sarabun-italic;
  src: url("../fonts/Sarabun/Sarabun-Italic.ttf");
}

/* ------------------- VARIABLES ------------------- */

:root {
  --primary-color: rgb(14, 17, 40);
  --secondary-color: rgb(0, 171, 245);
  --tertiary-color: rgb(219, 222, 227);
  --quaternary-color: rgb(255, 95, 104);
  --quinary-color: #18181c;
  --primary-border: solid rgba(219, 222, 227, 0.071) 1px;
  --primary-shadow: box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  --secondary-background-color: #18181c45;
}

/* ------------------- GLOBAL ------------------- */

html {
  position: relative;
  min-height: 100vh;
  width: 100%;
  font-family: sarabun-regular;
  font-size: 16px;
  background: var(--quinary-color);
  /* background: radial-gradient( circle farthest-corner at top right, #000c 0%, #18181c 34% ); */
  background: radial-gradient(circle farthest-corner at top left,rgb(255, 95, 104) -606%,#000001 70%);
  overflow-x: hidden;
}

/**
* The following pseudo-elements are used to create slated elements
* that move from right to left indefinitely to create a background effect
*/
html::before,
html::after {
  pointer-events: none;
  position: absolute;
  content: "";
  top: 0;
  height: 100%;
  width: 25%;
  background-color: var(--secondary-background-color);
  z-index: -1;
}

html::before {
  width: 35%;
  animation: leftward 40s linear infinite;
  clip-path: polygon(60% 0%, 100% 0%, 40% 100%, 0% 100%);
}

html::after {
  animation: leftward 160s linear infinite;
  clip-path: polygon(75% 0%, 100% 0%, 25% 100%, 0% 100%);
}

@keyframes leftward {
  0% {
    left: 100%;
  }
  100% {
    left: -100%;
  }
}

body {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  margin: 0;
  padding: 0;
  min-height: 100vh;
  width: 100%;
}

body::-webkit-scrollbar,
ul::-webkit-scrollbar {
  width: 5px;
}

body::-webkit-scrollbar-track,
ul::-webkit-scrollbar-track {
  background: var(--quinary-color); /* color of the tracking area */
}

body::-webkit-scrollbar-thumb,
ul::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: var(--tertiary-color); /* color of the scroll thumb */
}

/* ------------------- NAVIGATION ------------------- */

#app-navigation {
  z-index: 2;
  position: sticky;
  top: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 90%;
  height: 2.8rem;
  box-sizing: border-box;
  padding: 0 20px;
  margin: 20px 0 0 0;
  background-color: var(--secondary-background-color);
  border-radius: 4px;
  border: var(--primary-border);
  color: var(--tertiary-color);
  box-shadow: var(--primary-shadow);
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

@media screen and (min-width: 360px) {
  #app-navigation {
    justify-content: space-between;
    gap: initial;
  }
}

#app-navigation.opaque {
  background-color: var(--quinary-color);
}

.app-title {
  font-family: sarabun-bold;
  font-size: 1.3rem;
  letter-spacing: 2px;
  text-decoration: none;
  color: var(--tertiary-color);
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

.app-title.desktop {
  display: none;
}

#app-navigation ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 3px;
  width: 85%;
  color: var(--tertiary-color);
  list-style: none;
}

@media screen and (min-width: 440px) {
  #app-navigation ul {
    justify-content: space-around;
    gap: initial;
    width: 100%;
  }
}

@media screen and (min-width: 720px) {
  .app-title.mobile {
    display: none;
  }

  .app-title.desktop {
    display: inline-flex;
    font-size: 1.5rem;
  }

  #app-navigation ul {
    justify-content: space-between;
    gap: 30px;
    width: auto;
  }
}

#app-navigation .link-item {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 5px;
  padding: 5px 12px;
  border-radius: 4px;
  text-decoration: none;
  letter-spacing: 1px;
  color: var(--tertiary-color);
  cursor: pointer;
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

#app-navigation .link-item:hover,
#app-navigation .link-item:active,
#app-navigation .link-item.selected {
  color: var(--quinary-color);
  background-color: var(--quaternary-color);
}

#app-navigation .link-item:hover svg,
#app-navigation .link-item:active svg,
#app-navigation .link-item.selected svg {
  fill: #18181c;
}

#app-navigation svg {
  fill: var(--tertiary-color);
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

#app-navigation span {
  display: none;
}

@media screen and (min-width: 1200px) {
  
  #app-navigation span {
    display: inline-flex;
  }
}

#app-navigation a {
  text-decoration: none;
  color: inherit;
}

/* ------------------- CONTENT ------------------- */

.content {
  box-sizing: border-box;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-grow: 1;
  box-sizing: border-box;
  margin: 0;
  padding: 5px 0;
  width: 90%;
  min-height: 80vh;
  color: var(--quinary-color);
}

.header {
  letter-spacing: 1px;
}

.content button {
  color: var(--quinary-color);
  padding: 7px 12px;
  border-radius: 4px;
  background-color: var(--secondary-color);
  border: none;
  cursor: pointer;
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}
/* ... */

